--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ name = "decoy"
 version = "0.1.0"
 description = "Opinionated, typed stubbing and verification library for Python"
 authors = ["Mike Cousins <mike@cousins.io>"]
-license = "Apache-2.0"
+license = "MIT"
 readme = "README.md"
 repository = "https://github.com/mcous/decoy"
-homepage = "https://decoy.cousins.io"
-documentation = "https://decoy.cousins.io"
+homepage = "https://mike.cousins.io/decoy/"
+documentation = "https://mike.cousins.io/decoy/"
 
 include = [
   "LICENSE"
