--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ mkdocstrings = "^0.13.6"
 mypy = "^0.790"
 pytest = "^6.1.2"
 pytest-watch = "^4.2.0"
+pytest-asyncio = "^0.14.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
