fix: allow nested mocks and typing (#2)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,13 @@ repository = "https://github.com/mcous/decoy"
 homepage = "https://mike.cousins.io/decoy/"
 documentation = "https://mike.cousins.io/decoy/"
 
-include = [
-  "LICENSE"
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development :: Testing",
+    "Topic :: Software Development :: Testing :: Mocking",
+    "Typing :: Typed",
 ]
 
 [tool.poetry.dependencies]
@@ -28,6 +33,7 @@ mkdocstrings = "^0.13.6"
 mypy = "^0.790"
 pytest = "^6.1.2"
 pytest-watch = "^4.2.0"
+pytest-asyncio = "^0.14.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
