fix: replace unittest.mock usage with custom spy
MagicMock behavior in creation and usage didn't end up fitting cleanly into the Decoy API,
especially with asynchronous fakes and fakes that involve several layers of classes. This commit
replaces MagicMock with a very similar Spy class, that basically takes exactly what Decoy needs from
unittest.mock.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,8 +23,14 @@ plugins:
           handlers:
               python:
                   rendering:
+                      show_root_heading: True
+                      show_object_full_path: True
                       show_source: False
+                      heading_level: 2
 
 markdown_extensions:
+    - toc:
+          permalink: "#"
+    - admonition
     - pymdownx.highlight
     - pymdownx.superfences
