--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-mock = "^4.0.2"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
@@ -32,9 +31,12 @@ mkdocs-material = "^6.1.6"
 mkdocstrings = "^0.13.6"
 mypy = "^0.790"
 pytest = "^6.1.2"
-pytest-watch = "^4.2.0"
 pytest-asyncio = "^0.14.0"
+pytest-xdist = "^2.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.pytest.ini_options]
+addopts = "--color=yes"
