--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ mkdocstrings = "^0.13.6"
 mypy = "^0.790"
 pytest = "^6.1.2"
 pytest-asyncio = "^0.14.0"
+pytest-mypy-plugins = "^1.6.1"
 pytest-xdist = "^2.1.0"
 
 [tool.pytest.ini_options]
