--- a/tests/typing/test_mypy_plugin.yml
+++ b/tests/typing/test_mypy_plugin.yml
@@ -1,17 +1,15 @@
 # mypy plugin tests
 
 - case: does_not_suppress_func_returns_value
-  mypy_config: plugins = decoy.mypy
   main: |
       def noop() -> None:
           pass
 
       value = noop()
   out: |
-      main:4: error: "noop" does not return a value
+      main:4: error: "noop" does not return a value  [func-returns-value]
 
 - case: suppresses_func_returns_value_in_when
-  mypy_config: plugins = decoy.mypy
   main: |
       from decoy import Decoy
 
@@ -22,7 +20,6 @@
       stub = decoy.when(noop())
 
 - case: suppresses_func_returns_value_in_verify
-  mypy_config: plugins = decoy.mypy
   main: |
       from decoy import Decoy
 
@@ -33,7 +30,6 @@
       decoy.verify(noop())
 
 - case: does_not_suppress_other_errors
-  mypy_config: plugins = decoy.mypy
   main: |
       from decoy import Decoy
 
@@ -43,4 +39,4 @@
       decoy = Decoy()
       stub = decoy.when(do_thing("hello"))
   out: |
-      main:7: error: Too many arguments for "do_thing"
+      main:7: error: Too many arguments for "do_thing"  [call-arg]
