--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,10 +32,12 @@ mkdocstrings = "^0.13.6"
 mypy = "^0.790"
 pytest = "^6.1.2"
 pytest-asyncio = "^0.14.0"
+pytest-mypy-plugins = "^1.6.1"
 pytest-xdist = "^2.1.0"
 
 [tool.pytest.ini_options]
-addopts = "--color=yes"
+addopts = "--color=yes --mypy-ini-file=mypy.ini"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
