--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,9 @@ nav:
 
 theme:
     name: "material"
+    favicon: img/favicon.ico
+    icon:
+        logo: material/duck
     palette:
         scheme: preference
     features:
