--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,23 +22,22 @@ classifiers = [
 python = "^3.7"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
+black = "^21.5b1"
 flake8 = "^3.8.4"
 flake8-annotations = "^2.4.1"
 flake8-docstrings = "^1.5.0"
 mkdocs = "^1.1.2"
-mkdocs-material = "^6.1.6"
-mkdocstrings = "^0.13.6"
-mypy = "^0.790"
+mkdocs-material = "^7.1.6"
+mkdocstrings = "^0.15.1"
+mypy = "^0.812"
 pytest = "^6.1.2"
-pytest-asyncio = "^0.14.0"
+pytest-asyncio = "^0.15.1"
 pytest-mypy-plugins = "^1.6.1"
 pytest-xdist = "^2.1.0"
 
 [tool.pytest.ini_options]
-addopts = "--color=yes --mypy-ini-file=mypy.ini"
+addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
