--- a/tests/typing/test_typing.yml
+++ b/tests/typing/test_typing.yml
@@ -13,7 +13,8 @@
       reveal_type(fake)
   out: |
       main:9: note: Revealed type is 'main.Dependency*'
-
+  env:
+      - MYPYPATH=.
 - case: function_decoy_mimics_type
   main: |
       from decoy import Decoy
@@ -57,3 +58,21 @@
       decoy.when(fake("goodbye")).then_return("wrong-type")
   out: |
       main:10: error: Argument 1 to "then_return" of "Stub" has incompatible type "str"; expected "int"  [arg-type]
+
+- case: matchers_mimic_types
+  main: |
+      from decoy import matchers
+
+      reveal_type(matchers.Anything())
+      reveal_type(matchers.IsA(str))
+      reveal_type(matchers.IsNot(str))
+      reveal_type(matchers.StringMatching("foobar"))
+      reveal_type(matchers.ErrorMatching(RuntimeError))
+      reveal_type(matchers.Captor())
+  out: |
+      main:3: note: Revealed type is 'Any'
+      main:4: note: Revealed type is 'Any'
+      main:5: note: Revealed type is 'Any'
+      main:6: note: Revealed type is 'builtins.str'
+      main:7: note: Revealed type is 'builtins.Exception'
+      main:8: note: Revealed type is 'Any'
