--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,40 +1,72 @@
-name: Continuous integration
+name: "Continuous integration"
 
 on: [push, pull_request]
 
+env:
+    PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
+    POETRY_CACHE_DIR: ${{ github.workspace }}/.cache/pypoetry
+
 jobs:
     test:
-        name: Test Python ${{ matrix.python-version }} on ${{ matrix.os }}
+        name: "Test Python ${{ matrix.python-version }} on ${{ matrix.os }}"
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
                 python-version: ["3.7", "3.8", "3.9"]
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-python@v2
+            - name: "Check out repository"
+              uses: actions/checkout@v2
+
+            - name: "Set up Python"
+              uses: actions/setup-python@v2
               with:
                   python-version: ${{ matrix.python-version }}
-            - name: Install dependencies
+
+            - name: "Set up dependency cache"
+              uses: actions/cache@v2
+              with:
+                  key: deps-${{ secrets.GH_CACHE }}-${{ runner.os }}-${{ hashFiles('**/*.lock') }}
+                  path: |
+                      ${{ env.PIP_CACHE_DIR }}
+                      ${{ env.POETRY_CACHE_DIR }}
+
+            - name: "Install dependencies"
               run: pip install poetry && poetry install
-            - name: Run tests
+
+            - name: "Run tests"
               run: poetry run pytest
 
     check:
-        name: Lint and type checks
+        name: "Lint and type checks"
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-python@v2
+            - name: "Check out repository"
+              uses: actions/checkout@v2
+
+            - name: "Set up Python"
+              uses: actions/setup-python@v2
               with:
                   python-version: "3.8"
-            - name: Install dependencies
+
+            - name: "Set up dependency cache"
+              uses: actions/cache@v2
+              with:
+                  key: deps-${{ secrets.GH_CACHE }}-${{ runner.os }}-${{ hashFiles('**/*.lock') }}
+                  path: |
+                      ${{ env.PIP_CACHE_DIR }}
+                      ${{ env.POETRY_CACHE_DIR }}
+
+            - name: "Install dependencies"
               run: pip install poetry && poetry install
-            - name: Format checks
+
+            - name: "Check formatting"
               run: poetry run black --check .
-            - name: Lint checks
+
+            - name: "Check linter"
               run: poetry run flake8
-            - name: Type checks
+
+            - name: "Checks types"
               run: poetry run mypy
 
     build:
@@ -42,18 +74,32 @@ jobs:
         runs-on: ubuntu-latest
         needs: [test, check]
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-python@v2
+            - name: "Check out repository"
+              uses: actions/checkout@v2
+
+            - name: "Set up Python"
+              uses: actions/setup-python@v2
               with:
                   python-version: "3.8"
-            - name: Install dependencies
+
+            - name: "Set up dependency cache"
+              uses: actions/cache@v2
+              with:
+                  key: deps-${{ secrets.GH_CACHE }}-${{ runner.os }}-${{ hashFiles('**/*.lock') }}
+                  path: |
+                      ${{ env.PIP_CACHE_DIR }}
+                      ${{ env.POETRY_CACHE_DIR }}
+
+            - name: "Install dependencies"
               run: pip install poetry && poetry install
-            - name: Build artifacts
+
+            - name: "Build artifacts"
               run: |
                   poetry build
                   poetry run mkdocs build
-            - if: startsWith(github.ref, 'refs/tags/v')
-              name: Deploy to PyPI and GitHub Pages
+
+            - name: "Deploy to PyPI and GitHub Pages"
+              if: startsWith(github.ref, 'refs/tags/v')
               env:
                   USER_NAME: ${{ github.actor }}
                   USER_ID: ${{ github.event.sender.id }}
