--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ pytest-asyncio = "^0.15.1"
 pytest-mypy-plugins = "^1.6.1"
 pytest-xdist = "^2.1.0"
 
+[tool.poetry.plugins."pytest11"]
+"decoy" = "decoy.pytest_plugin"
+
 [tool.pytest.ini_options]
 addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini"
 
