--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,12 @@ pytest-xdist = "^2.1.0"
 [tool.pytest.ini_options]
 addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini"
 
+[tool.mypy]
+files = ["decoy", "tests"]
+plugins = ["decoy/mypy/plugin.py"]
+strict = true
+show_error_codes = true
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
