--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "decoy"
 version = "1.6.0"
-description = "Opinionated, typed stubbing and verification library for Python"
+description = "Opinionated mocking library for Python"
 authors = ["Mike Cousins <mike@cousins.io>"]
 license = "MIT"
 readme = "README.md"
@@ -18,8 +18,11 @@ classifiers = [
     "Typing :: Typed",
 ]
 
+[tool.poetry.urls]
+"Changelog" = "https://github.com/mcous/decoy/releases"
+
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b1"
@@ -48,5 +51,5 @@ strict = true
 show_error_codes = true
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
