--- a/.github/actions/install-poetry/action.yml
+++ b/.github/actions/install-poetry/action.yml
@@ -4,17 +4,14 @@ description: "Install the Poetry depedency manager"
 runs:
     using: "composite"
     steps:
-        - name: "Download and verify Poetry install script"
+        - name: "Download, verify, and run Poetry install script"
           shell: bash
           env:
               POETRY_INSTALLER_COMMIT: b47de09d800b7f2e4ed7088c8657878aa5380714
               POETRY_INSTALLER_SHA256: b35d059be6f343ac1f05ae56e8eaaaebb34da8c92424ee00133821d7f11e3a9c
+              POETRY_VERSION: "1.1.7"
           run: |
               curl -sSL -o install-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/${{ env.POETRY_INSTALLER_COMMIT }}/install-poetry.py
-              echo "${{ env.POETRY_INSTALLER_SHA256 }} *install-poetry.py" | shasum -c -a 256
-
-        - name: "Run Poetry install script"
-          shell: bash
-          env:
-              POETRY_VERSION: "1.1.7"
-          run: python install-poetry.py --version ${{ env.POETRY_VERSION }}
+              openssl sha256 install-poetry.py | grep ${{ env.POETRY_INSTALLER_SHA256 }}
+              python install-poetry.py --version ${{ env.POETRY_VERSION }}
+              rm -rf install-poetry.py
