--- a/.github/actions/install-poetry/action.yml
+++ b/.github/actions/install-poetry/action.yml
@@ -16,12 +16,8 @@ runs:
               python install-poetry.py --version ${{ env.POETRY_VERSION }}
               rm -rf install-poetry.py
 
-        - name: Update PATH
-          shell: bash
-          if: ${{ runner.os != 'Windows' }}
-          run: echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-        - name: Update PATH for Windows
-          shell: bash
-          if: ${{ runner.os == 'Windows' }}
-          run: echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
+              if [[ "${{ runner.os == 'Windows' }}" = true ]]; then
+                  echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
+              else
+                  echo "$HOME/.local/bin" >> $GITHUB_PATH
+              fi
