--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
               run: poetry install
 
             - name: "Run tests"
-              run: poetry run pytest
+              run: poetry run pytest --mypy-same-process
 
     check:
         name: "Lint and type checks"
