--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,16 +3,17 @@ name: "Continuous integration"
 on: [push, pull_request]
 
 env:
-    POETRY_VIRTUALENVS_IN_PROJECT: true
+    PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
+    POETRY_CACHE_DIR: ${{ github.workspace }}/.cache/pypoetry
     DEFAULT_PYTHON: "3.8"
 
 jobs:
     test:
         name: "Test Python ${{ matrix.python-version }} on ${{ matrix.os }}"
-        runs-on: ${{ matrix.os }}
+        runs-on: ${{ matrix.os }}-latest
         strategy:
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [Ubuntu, Windows, macOS]
                 python-version: ["3.6", "3.7", "3.8", "3.9"]
         steps:
             - name: "Check out repository"
@@ -25,12 +26,15 @@ jobs:
 
             - name: "Set up dependency cache"
               uses: actions/cache@v2
+              if: ${{ matrix.os != 'Windows' || matrix.python-version != 3.6 }}
               with:
                   key: deps-${{ secrets.GH_CACHE }}-${{ runner.os }}-python${{ matrix.python-version }}-${{ hashFiles('**/*.lock') }}
-                  path: .venv
+                  path: |
+                      ${{ env.PIP_CACHE_DIR }}
+                      ${{ env.POETRY_CACHE_DIR }}
 
             - name: "Install poetry"
-              uses: ./.github/actions/install-poetry
+              run: pip install poetry
 
             - name: "Install dependencies"
               run: poetry install
@@ -54,10 +58,12 @@ jobs:
               uses: actions/cache@v2
               with:
                   key: deps-${{ secrets.GH_CACHE }}-${{ runner.os }}-python${{ env.DEFAULT_PYTHON }}-${{ hashFiles('**/*.lock') }}
-                  path: .venv
+                  path: |
+                      ${{ env.PIP_CACHE_DIR }}
+                      ${{ env.POETRY_CACHE_DIR }}
 
             - name: "Install poetry"
-              uses: ./.github/actions/install-poetry
+              run: pip install poetry
 
             - name: "Install dependencies"
               run: poetry install
@@ -88,10 +94,12 @@ jobs:
               uses: actions/cache@v2
               with:
                   key: deps-${{ secrets.GH_CACHE }}-${{ runner.os }}-python${{ env.DEFAULT_PYTHON }}-${{ hashFiles('**/*.lock') }}
-                  path: .venv
+                  path: |
+                      ${{ env.PIP_CACHE_DIR }}
+                      ${{ env.POETRY_CACHE_DIR }}
 
             - name: "Install poetry"
-              uses: ./.github/actions/install-poetry
+              run: pip install poetry
 
             - name: "Install dependencies"
               run: poetry install
