--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,9 @@ jobs:
 
             - name: "Set up dependency cache"
               uses: actions/cache@v2
-              if: ${{ matrix.os != 'Windows' || matrix.python-version != 3.6 }}
+              # poetry venv restore is buggy on windows
+              # https://github.com/python-poetry/poetry/issues/2629
+              if: ${{ matrix.os != 'Windows' }}
               with:
                   key: deps-${{ secrets.GH_CACHE }}-${{ runner.os }}-python${{ matrix.python-version }}-${{ hashFiles('**/*.lock') }}
                   path: |
