--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,12 @@ classifiers = [
 "Changelog" = "https://github.com/mcous/decoy/releases"
 
 [tool.poetry.dependencies]
-python = "^3.6.2"
+python = "^3.6"
 
 [tool.poetry.dev-dependencies]
-black = "^21.5b1"
+black = { version = "^21.7b0", python = "^3.6.2" }
 flake8 = "^3.8.4"
-flake8-annotations = "^2.4.1"
+flake8-annotations = { version = "^2.6.2", python = "^3.6.2" }
 flake8-docstrings = "^1.5.0"
 mkdocs = "^1.1.2"
 mkdocs-material = "^7.1.10"
