fix(spy): match inspect.signature for staticmethods

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,12 +31,14 @@ theme:
         - media: "(prefers-color-scheme: light)"
           scheme: default
           primary: black
+          accent: indigo
           toggle:
               icon: material/weather-sunny
               name: Switch to dark mode
         - media: "(prefers-color-scheme: dark)"
           scheme: slate
           primary: amber
+          accent: yellow
           toggle:
               icon: material/weather-night
               name: Switch to light mode
