--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ pytest = "^6.1.2"
 pytest-asyncio = "^0.15.1"
 pytest-mypy-plugins = "^1.6.1"
 pytest-xdist = "^2.1.0"
+coverage = "^5.5"
 
 [tool.poetry.plugins."pytest11"]
 "decoy" = "decoy.pytest_plugin"
