ci: ensure mypy plugin coverage stats are collected

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
               run: poetry install
 
             - name: "Run tests"
-              run: poetry run coverage run --branch --source=decoy -m pytest
+              run: poetry run coverage run --branch --source=decoy -m pytest --mypy-same-process
 
             - name: "Generate coverage report"
               run: poetry run coverage xml
