--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         strategy:
             matrix:
                 os: [Ubuntu, Windows, macOS]
-                python-version: ["3.6", "3.7", "3.8", "3.9", "3.10.0-rc"]
+                python-version: ["3.6", "3.7", "3.8", "3.9", "3.10.0-rc - 3.10"]
         steps:
             - name: "Check out repository"
               uses: actions/checkout@v2
