--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 env:
     PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
     POETRY_CACHE_DIR: ${{ github.workspace }}/.cache/pypoetry
+    POETRY_EXPERIMENTAL_NEW_INSTALLER: "false"
     DEFAULT_PYTHON: "3.8"
 
 jobs:
