--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ on: [push, pull_request]
 env:
     PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
     POETRY_CACHE_DIR: ${{ github.workspace }}/.cache/pypoetry
-    POETRY_EXPERIMENTAL_NEW_INSTALLER: "false"
     DEFAULT_PYTHON: "3.8"
 
 jobs:
@@ -40,7 +39,9 @@ jobs:
               run: pip install poetry
 
             - name: "Install dependencies"
-              run: poetry install
+              run: |
+                  poetry config experimental.new-installer false
+                  poetry install
 
             - name: "Run tests"
               run: poetry run coverage run --branch --source=decoy -m pytest --mypy-same-process
