--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ nav:
           - usage/verify.md
           - usage/matchers.md
           - usage/errors-and-warnings.md
+    - Advanced Usage:
+          - advanced/context-managers.md
     - api.md
     - why.md
     - contributing.md
