--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ pytest = "^7.0.1"
 pytest-asyncio = "^0.16.0"
 pytest-mypy-plugins = "^1.9.3"
 pytest-xdist = "^2.5.0"
-coverage = {extras = ["toml"], version = "^6.2"}
+coverage = { extras = ["toml"], version = "^6.2" }
 
 [tool.poetry.plugins."pytest11"]
 "decoy" = "decoy.pytest_plugin"
@@ -50,6 +50,10 @@ files = ["decoy", "tests"]
 plugins = ["decoy/mypy/plugin.py"]
 strict = true
 show_error_codes = true
+
+[[tool.mypy.overrides]]
+module = "decoy.context_managers"
+warn_unused_ignores = false
 
 [tool.coverage.report]
 exclude_lines = ["@overload"]
