--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,12 +32,12 @@ flake8-docstrings = "^1.5.0"
 mkdocs = "^1.2.3"
 mkdocs-material = "^8.2.5"
 mkdocstrings = "^0.16.2"
-mypy = "^0.931"
+mypy = "^0.941"
 pytest = "^7.0.1"
 pytest-asyncio = "^0.16.0"
 pytest-mypy-plugins = "^1.9.3"
 pytest-xdist = "^2.5.0"
-coverage = {extras = ["toml"], version = "^6.2"}
+coverage = { extras = ["toml"], version = "^6.2" }
 
 [tool.poetry.plugins."pytest11"]
 "decoy" = "decoy.pytest_plugin"
@@ -51,8 +51,14 @@ plugins = ["decoy/mypy/plugin.py"]
 strict = true
 show_error_codes = true
 
+# TODO(mc, 2022-03-14): drop support for Python 3.6 in Decoy v2
+# Python 3.6 does not have async generator context managers
+[[tool.mypy.overrides]]
+module = "decoy.context_managers"
+warn_unused_ignores = false
+
 [tool.coverage.report]
-exclude_lines = ["@overload"]
+exclude_lines = ["@overload", "if TYPE_CHECKING:"]
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
