--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         strategy:
             matrix:
                 os: [Ubuntu, Windows, macOS]
-                python-version: ['3.7', '3.8', '3.9', '3.10']
+                python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         steps:
             - name: 'Check out repository'
               uses: actions/checkout@v3
@@ -80,7 +80,7 @@ jobs:
               run: poetry run black --check .
 
             - name: 'Check linter'
-              run: poetry run flake8
+              run: poetry run ruff check .
 
             - name: 'Checks types'
               run: poetry run mypy
