--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,28 +22,27 @@ classifiers = [
 "Changelog" = "https://github.com/mcous/decoy/releases"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
+ruff = "^0.0.245"
 
 [tool.poetry.dev-dependencies]
-black = { version = "^22.8", python = "^3.6.2" }
-flake8 = "^4.0.1"
-flake8-annotations = { version = "^2.7.0", python = "^3.6.2" }
-flake8-docstrings = "^1.5.0"
-mkdocs = "^1.2.4"
-mkdocs-material = "^8.2.7"
-mkdocstrings = "^0.16.2"
-mypy = "^0.941"
+black = "^23.1.0"
+mkdocs = "^1.4.2"
+mkdocs-material = "^9.0.12"
+mkdocstrings = { extras = ["python"], version = "^0.20.0" }
+mypy = "^1.0.0"
 pytest = "^7.0.1"
-pytest-asyncio = "^0.16.0"
-pytest-mypy-plugins = "^1.9.3"
+pytest-asyncio = "^0.20.3"
+pytest-mypy-plugins = "^1.10.1"
 pytest-xdist = "^3.0.2"
-coverage = { extras = ["toml"], version = "^6.2" }
+coverage = { extras = ["toml"], version = "^7.1.0" }
 
 [tool.poetry.plugins."pytest11"]
 "decoy" = "decoy.pytest_plugin"
 
 [tool.pytest.ini_options]
 addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini"
+asyncio_mode = "auto"
 
 [tool.mypy]
 files = ["decoy", "tests"]
@@ -59,6 +58,25 @@ warn_unused_ignores = false
 
 [tool.coverage.report]
 exclude_lines = ["@overload", "if TYPE_CHECKING:"]
+
+[tool.ruff]
+extend-exclude = [".cache"]
+ignore = [
+    "ANN101",
+    "ANN102",
+    "ANN401",
+    "D107",
+]
+select = [
+    "ANN",
+    "D",
+    "E",
+    "F",
+    "W",
+]
+
+[tool.ruff.pydocstyle]
+convention = "google"
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
