--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -39,7 +39,7 @@ runs:
 
         - name: "Install poetry"
           shell: bash
-          if: ${{ steps.check-poetry.conclusion == 'failure'}}
+          if: ${{ steps.check-poetry.outcome == 'failure'}}
           run: |
               ${{ steps.setup-python.outputs.python-path }} -m venv "${{ inputs.cache }}/tools"
               pip install poetry==${{ inputs.poetry-version }}
